--- a/app/views/admin/produits/_produit.html.erb
+++ b/app/views/admin/produits/_produit.html.erb
@@ -63,7 +63,7 @@
                         :onclick => "return confirm('Etes-vous certain de vouloir dupliquer ce produit ?')",
                         title: 'Dupliquer' do %>
                     <i class="bi-copy me-1"></i>
-                    <span class="fw-bold">Dupliquer</span>
+                    <span class="">Dupliquer</span>
                   
                   <% end %>
                 <% end %>  
