--- a/app/views/public/pages/_carousel.html.erb
+++ b/app/views/public/pages/_carousel.html.erb
@@ -1,25 +1,40 @@
-<div id="carouselProduit" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <%= image_tag(@produit.default_image, class: "img-fluid rounded-start", alt: @produit.nom) %>
-        </div>
+<div id="carouselProduit_<%= produit.id %>" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner <%= carousel_class %>">
 
-        <% if @produit.images %>
+        <% if produit.video1.attached? %>
+            <div class="carousel-item active">
+                <video autoplay loop muted playsinline class="d-block w-100 <%= carousel_class %>"
+                src="<%= url_for(produit.video1) %>"
+                type="<%= produit.video1.content_type %>">
+                Votre navigateur ne prend pas en charge la lecture de vidéos.
+                </video>
+            </div>
+            <div class="carousel-item">
+                <%= image_tag(produit.default_image, class: "img-fluid rounded-start", alt: produit.nom) %>
+            </div>
+        <% else %>
+            <div class="carousel-item active">
+                <%= image_tag(produit.default_image, class: "img-fluid rounded-start", alt: produit.nom) %>
+            </div>
+        <% end %>
 
-            <% @produit.images.each do |image| %>
+
+        <% if produit.images %>
+
+            <% produit.images.each do |image| %>
                 <div class="carousel-item">
-                    <%= image_tag(image, class: "img-fluid rounded-start", alt: @produit.nom) %>
+                    <%= image_tag(image, class: "img-fluid rounded-start", alt: produit.nom) %>
                 </div>
             <% end %> 
         
         <% end %>
 
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselProduit" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselProduit_<%= produit.id %>" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselProduit" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselProduit_<%= produit.id %>" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
