--- a/app/views/admin/produits/_produit.html.erb
+++ b/app/views/admin/produits/_produit.html.erb
@@ -41,7 +41,7 @@
                 <%= badge_eshop(produit) %>
 
                 <% unless controller_name == "selection_produit" %>
-                  <% statut = statut_disponibilite(produit, Date.today.to_date, Date.today.to_date) %>
+                  <% statut = produit.statut_disponibilite(Date.today.to_date, Date.today.to_date) %>
                   <% disponibles = statut[:disponibles] %>
                   <p class="m-1 mt-3">
                     <span class="badge <%= disponibles > 0 ? 'bg-success' : 'bg-danger' %>">
@@ -50,7 +50,7 @@
                   </p>
                   
                 <% end %>
-                
+
                 <%= is_archived(produit) %> 
             </div>
 
