--- a/app/views/admin/selection_produit/_selection_manuelle.html.erb
+++ b/app/views/admin/selection_produit/_selection_manuelle.html.erb
@@ -5,7 +5,7 @@
 
   <%= button_to display_categorie_selected_admin_selection_produit_index_path(
       categorie_produit: "all"), 
-      class: "btn btn-outline-primary m-1 btn-topic",
+      class: "btn btn-sm btn-outline-primary m-1 btn-topic",
       data: { controller: "button-color", action: "click->button-color#handleClick" },
       "data-original-color": "text-primary" do %>
       <span class="ms-1 fw-bold">Tout</span>
@@ -13,7 +13,7 @@
 
   <% @categorie_produits.each do |categorie_produit| %>
     <%= button_to display_categorie_selected_admin_selection_produit_index_path(
-        categorie_produit: categorie_produit), class: "btn btn-outline-primary m-1 btn-topic",
+        categorie_produit: categorie_produit), class: "btn btn-sm btn-outline-primary m-1 btn-topic",
         data: { controller: "button-color", action: "click->button-color#handleClick" },
         "data-original-color": "text-primary" do %>
       <span class="fw-bold"><%= categorie_produit.nom %></span>
