--- a/app/views/admin/produits/index.html.erb
+++ b/app/views/admin/produits/index.html.erb
@@ -4,11 +4,15 @@
 
 <%= bloc_nouveau(Produit) %>
 
+<%= render  "filtres" %>
+
 <%= turbo_frame_tag :results, data: {turbo_action: 'advance'} do %>
       <div id="produits"> </div> 
 
       <%= turbo_frame_tag :pagination, loading: :lazy, 
-                        src: admin_produits_path(format: :turbo_stream,
-                        q: params[:q]&.to_unsafe_h) %>
+            src: admin_produits_path(format: :turbo_stream,
+            filter_taille: params[:filter_taille], 
+            filter_couleur: params[:filter_couleur], 
+            q: params[:q]&.to_unsafe_h) %>
 <% end %>
 
