--- a/app/views/admin/produits/index.turbo_stream.erb
+++ b/app/views/admin/produits/index.turbo_stream.erb
@@ -6,9 +6,11 @@
 
 <% if @pagy.next.present? %>
     <%= turbo_stream.replace :pagination do %>
-        <%= turbo_frame_tag :pagination, loading: :lazy,
-                            src: admin_produits_path(format: :turbo_stream,
-                            page: @pagy.next, q: params[:q]&.to_unsafe_h ) %>
-    <% end %>
+        <%= turbo_frame_tag :pagination, loading: :lazy, 
+              src: admin_produits_path(format: :turbo_stream, 
+              filter_taille: params[:filter_taille], 
+              filter_couleur: params[:filter_couleur], 
+              sort: params[:sort], page: @pagy.next) %>
 
+    <% end %>
 <% end %>
