--- a/app/views/admin/selection_produit/_categorie_selected.html.erb
+++ b/app/views/admin/selection_produit/_categorie_selected.html.erb
@@ -6,7 +6,7 @@
 
       <%= button_to display_taille_selected_admin_selection_produit_index_path(
           categorie_produit: @categorie_produits, taille: "all"), 
-          class: "btn btn-outline-primary m-1 btn-topic",
+          class: "btn btn-sm btn-outline-primary m-1 btn-topic",
           data: { controller: "button-color", action: "click->button-color#handleClick" },
           "data-original-color": "text-primary" do %>
           <span class="fw-bold">Tout</span>
@@ -15,7 +15,7 @@
 
     <% @tailles.each do |taille| %>
       <%= button_to display_taille_selected_admin_selection_produit_index_path(categorie_produit: @categorie_produits, taille: taille), 
-          class: "btn btn-outline-primary m-1 btn-topic",
+          class: "btn btn-sm btn-outline-primary m-1 btn-topic",
           data: { controller: "button-color", action: "click->button-color#handleClick" },
           "data-original-color": "text-primary" do %>
           <span class="fw-bold"><%= taille.nom %></span>
