--- a/app/views/admin/selection_produit/_taille_selected.html.erb
+++ b/app/views/admin/selection_produit/_taille_selected.html.erb
@@ -3,7 +3,7 @@
 <div class="d-flex flex-wrap justify-content-center align-items-center mb-3">
   <%= button_to display_couleur_selected_admin_selection_produit_index_path(
       categorie_produit: @categorie_produits, taille: @tailles, couleur: "all"), 
-      class: "btn btn-outline-primary m-1 btn-topic",
+      class: "btn btn-sm btn-outline-primary m-1 btn-topic",
       data: { controller: "button-color", action: "click->button-color#handleClick" },
       "data-original-color": "text-primary" do %>
       <span class="fw-bold">Tout</span>
@@ -12,7 +12,7 @@
   <% @couleurs.each do |couleur| %>
     <%= button_to display_couleur_selected_admin_selection_produit_index_path(
         categorie_produit: @categorie_produits, taille: @tailles, couleur: couleur), 
-        class: "btn btn-outline-primary m-1 btn-topic",
+        class: "btn btn-sm btn-outline-primary m-1 btn-topic",
         data: { controller: "button-color", action: "click->button-color#handleClick" },
         "data-original-color": "text-primary" do %>
         <span class="fw-bold"><%= couleur.nom %></span>
