--- a/app/views/admin/produits/_filtres.html.erb
+++ b/app/views/admin/produits/_filtres.html.erb
@@ -1,54 +1,56 @@
-<%# filtres
-- menu deroulant categories
-- menu deroulant couleur
-- menu deroulant taille
-- menu deroulant statut : actif / archivé
-
-tris
-- nom haut bas
-- prix haut bas
-%>
 
 <div class="container-fluid d-flex flex-wrap gap-1">
-    <div class="dropdown">
-        <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="tailleDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-            Tailles
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="tailleDropdown">
-            <li>
-            <%= link_to "Toutes les tailles", url_for(filter_taille: nil, filter_couleur: params[:filter_couleur]), class: "dropdown-item" %>
-            </li>
-            <% @tailles.each do |taille| %>
-            <li>
-                <%= link_to taille.nom, url_for(filter_taille: taille, filter_couleur: params[:filter_couleur]), class: "dropdown-item" %>
-            </li>
-            <% end %>
-        </ul>
+    <div>
+        <%= filter_dropdown(
+            label: "Catégorie",
+            icon: "bi bi-layers",
+            param_key: :filter_categorie,
+            collection: @categorie_produits,
+            model: CategorieProduit,
+            current_params: params.permit(:filter_taille, :filter_couleur, :filter_statut),
+            all_label: "Toutes les catégories"
+        ) %>
+    </div>
+    <div>
+        <%= filter_dropdown(
+            label: "Taille",
+            icon: "bi bi-rulers",
+            param_key: :filter_taille,
+            collection: @tailles,
+            model: Taille,
+            current_params: params.permit(:filter_couleur, :filter_categorie, :filter_statut),
+            all_label: "Toutes les tailles"
+        ) %>
+    </div>
+    <div>
+        <%= filter_dropdown(
+            label: "Couleur",
+            icon: "bi bi-palette",
+            param_key: :filter_couleur,
+            collection: @couleurs,
+            model: Couleur,
+            current_params: params.permit(:filter_taille, :filter_categorie, :filter_statut),
+            all_label: "Toutes les couleurs"
+        ) %>
+    </div>
+    <div>
+        <%= filter_dropdown(
+            label: "Statut",
+            icon: "bi bi-bookmark-check",
+            param_key: :filter_statut,
+            current_params: params.permit(:filter_taille, :filter_couleur, :filter_categorie)
+        ) %>
     </div>
 
-    <div class="dropdown">
-        <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="couleurDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-            Couleurs
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="couleurDropdown">
-            <li>
-            <%= link_to "Toutes les couleurs", url_for(
-                filter_couleur: nil, 
-                filter_taille: params[:filter_taille]), 
-                class: "dropdown-item" %>
-            </li>
-            <% @couleurs.each do |couleur| %>
-            <li>
-                <%= link_to couleur.nom, url_for(filter_couleur: couleur, filter_taille: params[:filter_taille]), class: "dropdown-item" %>
-            </li>
-            <% end %>
-        </ul>
+    <div class="ms-auto">
+        <%= sort_dropdown(params.permit(:filter_taille, :filter_couleur, :filter_categorie, :filter_statut)) %>
     </div>
-
+    <div>
+        <%= link_to admin_produits_path, class: 'btn btn-sm btn-outline-danger rounded' do %>
+            <i class="bi bi-xl bi-x-circle"></i>
+        <% end %>
+    </div>
 
 </div>
 
-    <hr>
 
-    taille active: <%= Taille.find(params[:filter_taille]).nom if params[:filter_taille].present? %> <br>
-    couleur active: <%= Couleur.find(params[:filter_couleur]).nom if params[:filter_couleur].present? %> <br>
