--- a/app/views/admin/produits/index.turbo_stream.erb
+++ b/app/views/admin/produits/index.turbo_stream.erb
@@ -10,6 +10,8 @@
               src: admin_produits_path(format: :turbo_stream, 
               filter_taille: params[:filter_taille], 
               filter_couleur: params[:filter_couleur], 
+              filter_categorie: params[:filter_categorie],
+              filter_statut: params[:filter_statut],
               sort: params[:sort], page: @pagy.next) %>
 
     <% end %>
