--- a/app/views/public/pages/_filtres_prix.html.erb
+++ b/app/views/public/pages/_filtres_prix.html.erb
@@ -1,32 +1,48 @@
 <div id="filtres-prix">
 
-    <div class="text-uppercase mt-2">
-        Prix
-    </div>
+    <div class="dropdown">
+        <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="prixDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="bi bi-currency-euro"></i>
+            <span class="ms-1 d-none d-md-inline">
+            <%= if params[:prixmax].present?
+                    "&lt; #{custom_currency_no_decimals_format(params[:prixmax])}".html_safe
+                else
+                    "Prix"
+                end %>
+            </span>
+        </button>
 
-    <div class="d-flex flex-wrap gap-1">
-        <%= button_to "Tous", 
-            update_filters_path(
-                slug: params[:slug], 
-                id: params[:id], 
-                taille: params[:taille], 
-                couleur: params[:couleur],
-                prixmax: nil,
-                type: params[:type]
-            ), 
-            class: link_badge_prix_class(nil) %>
-
-        <% @tranches_prix.each do |prix| %>
-            <%= button_to "< #{custom_currency_no_decimals_format(prix)}", update_filters_path(
-                slug: params[:slug], 
-                id: params[:id], 
-                taille: params[:taille], 
-                couleur: params[:couleur],
-                prixmax: prix,
-                type: params[:type]
+        <ul class="dropdown-menu" aria-labelledby="prixDropdown">
+            <li>
+            <%= button_to "Tous",
+                update_filters_path(
+                    slug: params[:slug],
+                    id: params[:id],
+                    taille: params[:taille],
+                    couleur: params[:couleur],
+                    prixmax: nil,
+                    type: params[:type]
                 ),
-                class: link_badge_prix_class(prix) %>
-        <% end %>
+                class: "dropdown-item #{'fw-bold' if params[:prixmax].blank?}" %>
+            </li>
+
+            <% @tranches_prix.each do |prix| %>
+            <li>
+                <% label = "< #{custom_currency_no_decimals_format(prix)}" %>
+                <%= button_to label.html_safe,
+                    update_filters_path(
+                    slug: params[:slug],
+                    id: params[:id],
+                    taille: params[:taille],
+                    couleur: params[:couleur],
+                    prixmax: prix,
+                    type: params[:type]
+                    ),
+                    class: "dropdown-item #{'fw-bold' if params[:prixmax].to_s == prix.to_s}" %>
+            </li>
+            <% end %>
+        </ul>
     </div>
+
 
 </div>
