add aos on public

--- a/app/views/public/pages/cart.html.erb
+++ b/app/views/public/pages/cart.html.erb
@@ -12,11 +12,11 @@
                 <div class="row g-0 flex-grow-1">
                     <div class="col-auto">
                         <%= image_tag(cart_item.default_image, 
-                            class: "rounded-start", style: "max-height: 200px; object-fit: cover;") %>
+                            class: "rounded-start", style: "max-height: 100px; object-fit: cover;") %>
                     </div>
 
                     <div class="col p-2 d-flex flex-column">
-                        <div class="fs-5 fw-bold">
+                        <div class="fs-5">
                             <%= cart_item.nom %> 
                         </div>                      
                         <small class="fs-6 my-1 text-truncate-multiline">
