--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -13,6 +13,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" async >
+
     <%= favicon_link_tag asset_path('favicon.webp'), :rel => 'icon', :type =>  'image/png' %>
 
     <%= render "admin/shared/gtag" %>
@@ -33,6 +35,14 @@
     <footer>
       <%= render "public/shared/footer" %>
     </footer>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      document.addEventListener("turbo:load", () => {
+        AOS.init();
+      });
+    </script>
+
   </body>
 
 
