--- a/app/views/public/pages/produits.html.erb
+++ b/app/views/public/pages/produits.html.erb
@@ -13,7 +13,7 @@
 
     <%#= render "texte_categorie" %>
 
-    <div class="container-fluid d-flex flex-wrap gap-1">
+    <div class="container-fluid d-flex flex-wrap gap-1 justify-content-center">
 
         <%= render  "filtres_categorie" %>
         <%= render  "filtres_taille" %>
