--- a/app/views/public/pages/_infos.html.erb
+++ b/app/views/public/pages/_infos.html.erb
@@ -1,5 +1,5 @@
  <div class="row justify-content-evenly">
-    <div class="col-sm bg-light m-2 p-2 rounded">
+    <div class="col-sm bg-light m-2 p-2 rounded" data-aos="fade">
         <div class="text-center brand-colored fs-4 m-2 p-2">
             <i class="bi bi-person-lines-fill"></i>
             <span class="fw-bold"> Contacts </span>
@@ -8,7 +8,7 @@
           <%= @texteContact %>
         </div>
     </div>
-    <div class="col-sm bg-light m-2 p-2 rounded">
+    <div class="col-sm bg-light m-2 p-2 rounded" data-aos="fade">
         <div class="text-center brand-colored fs-4 m-2 p-2">
           <i class="bi bi-clock"></i>
           <span class="fw-bold"> Horaires </span>
@@ -17,7 +17,7 @@
           <%= @texteHoraire %>
         </div>
     </div>
-    <div class="col-sm bg-light m-2 p-2 rounded">
+    <div class="col-sm bg-light m-2 p-2 rounded" data-aos="fade">
         <div class="text-center brand-colored fs-4 m-2 p-2">
           <i class="bi bi-geo-alt-fill"></i>
           <span class="fw-bold"> Adresse </span>
