--- a/app/views/public/pages/categories.html.erb
+++ b/app/views/public/pages/categories.html.erb
@@ -2,7 +2,7 @@
 
     <div class="container-fluid">
 
-        <div class="row row-cols-2 row-cols-md-4 g-2 p-2 m-0">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 p-2 m-0">
             <% @categories.each do |categorie| %>
                 <div class="col">
                     <%= card_categorie(categorie) %>
