--- a/app/views/public/pages/laboutique.html.erb
+++ b/app/views/public/pages/laboutique.html.erb
@@ -2,19 +2,18 @@
 
     <div class="container-fluid">
 
-
         <div class="row m-4 p-4">
-            <div class="col w-25 text-center p-2">
-                <%= image_tag("equipe1.jpg", class:"img-fluid") %>
+            <div class="col-12 col-md-6 text-center p-2" data-aos="fade">
+                <%= image_tag("equipe1.jpg", class: "img-fluid rounded") %>
             </div>
-            <div class="col w-25 text-center p-2">
-                <%= image_tag("equipe2.jpg", class:"img-fluid") %>
+            <div class="col-12 col-md-6 text-center p-2" data-aos="fade">
+                <%= image_tag("equipe2.jpg", class: "img-fluid rounded") %>
             </div>
         </div>
 
         <%= render "infos" %>
 
-        <div class="text-center m-4 p-4">
+        <div class="text-center m-4 p-4" data-aos="fade">
             <%= @texteBoutique %>
         </div>
 
