--- a/app/views/public/pages/produits.html.erb
+++ b/app/views/public/pages/produits.html.erb
@@ -1,6 +1,6 @@
 <div class="public-main-content">
 
-    <div class="p-4">
+    <div class="p-4" data-aos="fade">
 
         <%= search_form_for @q, url: produits_index_path, html: { class: "d-flex align-items-center w-100 position-relative" }, data: { turbo_frame: :results } do |f| %>
             <%= f.search_field :nom_or_description_or_categorie_produits_nom_or_type_produit_nom_or_couleur_nom_or_taille_nom_cont, 
@@ -13,7 +13,7 @@
 
     <%#= render "texte_categorie" %>
 
-    <div class="container-fluid d-flex flex-wrap gap-1 justify-content-center">
+    <div class="container-fluid d-flex flex-wrap gap-1 justify-content-center" data-aos="fade">
 
         <%= render  "filtres_categorie" %>
         <%= render  "filtres_taille" %>
