--- a/app/views/public/pages/animation.html.erb
+++ b/app/views/public/pages/animation.html.erb
@@ -1,20 +1,25 @@
-<!-- Scroll buffer -->
-<div style="height: 4000px;"></div>
-
-<!-- First Three.js canvas -->
-<div id="three-canvas"
-     style="position: fixed; top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100%; height: 600px; z-index: 1;">
+<!-- Scroll position display -->
+<div id="scrollPosition" 
+     style="
+          position: fixed;
+          top: 10px;
+          right: 10px;
+          background-color: rgba(0, 0, 0, 0.7);
+          color: white;
+          padding: 5px 10px;
+          border-radius: 5px;
+          z-index: 9999;">
+     Scroll Y: 0px
 </div>
 
-<!-- Scroll buffer -->
+<div id="canvas1"style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1;"></div>
+<!-- Spacer -->
+<div style="height: 5000px;"></div>
+
+<div id="canvas2" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1;"></div>
+<!-- Spacer -->
 <div style="height: 4000px;"></div>
 
-<!-- Second Three.js scene container (hidden initially) -->
-<div id="next-canvas"
-     style="opacity: 0; transition: opacity 1s ease;
-            position: fixed; top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100%; height: 400px; z-index: 1;">
-</div>
+<div id="canvas3" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1;"></div>
+<!-- Spacer -->
+<div style="height: 4000px;"></div>
