--- a/app/views/public/pages/animation.html.erb
+++ b/app/views/public/pages/animation.html.erb
@@ -14,7 +14,7 @@
 
 <div id="canvas1"style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1;"></div>
 <!-- Spacer -->
-<div style="height: 5000px;"></div>
+<div style="height: 6000px;"></div>
 
 <div id="canvas2" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1;"></div>
 <!-- Spacer -->
@@ -22,4 +22,8 @@
 
 <div id="canvas3" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1;"></div>
 <!-- Spacer -->
-<div style="height: 4000px;"></div>
+<div style="height: 6000px;"></div>
+
+<div id="canvas4" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1;"></div>
+<!-- Spacer -->
+<div style="height: 12000px;"></div>
